Profile fragment is finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="menu_calendar">Calendar</string>
     <string name="menu_medicine">Medicine</string>
     <string name="menu_caretaker">Caretaker</string>
+    <string name="menu_profile">Profile</string>
 </resources>
