--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="menu_calendar">Calendar</string>
     <string name="menu_medicine">Medicine</string>
     <string name="menu_caretaker">Caretaker</string>
-    <string name="menu_profile">Profile</string>
+    <string name="menu_LogIn">Login</string>
 
     <string name="add_medicine">Add Medicine</string>
     <string name="unitTypePrompt">Unit Type</string>
