add post put patch delete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="menu_caretaker">Caretaker</string>
     <string name="menu_profile">Profile</string>
     <string name="menu_scan_qr_code">Scan QR Code</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
