--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="menu_medicine">Medicine</string>
     <string name="menu_caretaker">Caretaker</string>
     <string name="menu_LogIn">Login</string>
+    <string name="menu_ScanQR">ScanQR</string>
 
     <string name="add_medicine">Add Medicine</string>
     <string name="unitTypePrompt">Unit Type</string>
