--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="menu_caretaker">Caretaker</string>
     <string name="menu_LogIn">Login</string>
     <string name="menu_ScanQR">ScanQR</string>
+    <string name="menu_scan_NFC_tag">Scan NFC Tag</string>
 
     <string name="add_medicine">Add Medicine</string>
     <string name="unitTypePrompt">Unit Type</string>
