--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,11 +34,17 @@
 
     <string-array name="FrequencyList">
         <item>Every Day</item>
-<!--        <item>As needed</item>-->
+        <!--        <item>As needed</item>-->
         <item>Specific Days</item>
         <item>Days Interval</item>
         <item>Birth Control Cycle</item>
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_confirm">ConfirmActivity</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
 </resources>
